@@ -1,3 +1,4 @@
+- added simplified ball get target algorithm (2024/04/21 MS)
 - properly install icon (2024/04/20 MS)
 - fixed another bug in ball reflection (2024/04/14 MS)
 - properly read windows files in preview and editor (2024/04/14 MS)
